tests/cases/parser/patterns/pat_match_missing_comma.stderr
error: unexpectedly encountered the identifier `_`
  --> $DIR/pat_match_missing_comma.hash:12:9
11 |           }
12 |           _ => -1
   |           ^ 
13 |       };
   = help: expected a `,`
